objects/docebo_v3__LearningPlanCourse__c.object
<CustomObject>
    <description>Links a course to a learning plan</description>
    <fields>
        <fullName>docebo_v3__CompsiteForeignKey__c</fullName>
        <description>Concatenates course and learningPlan ids. This needs to be unique and is populated automatically via workflow rule.</description>
        <externalId>true</externalId>
        <label>CompositeForeignKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>docebo_v3__Course__c</fullName>
        <description>A course.</description>
        <label>Course</label>
        <referenceTo>docebo_v3__Course__c</referenceTo>
        <relationshipLabel>Learning Plan Courses</relationshipLabel>
        <relationshipName>LearningPlanCourses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>docebo_v3__LearningPlan__c</fullName>
        <description>A Learning Plan</description>
        <label>Learning Plan</label>
        <referenceTo>docebo_v3__LearningPlan__c</referenceTo>
        <relationshipLabel>Learning Plan Courses</relationshipLabel>
        <relationshipName>LearningPlanCourses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Learning Plan Course</label>
    <listViews>
        <fullName>docebo_v3__All</fullName>
        <columns>docebo_v3__Course__c</columns>
        <columns>docebo_v3__LearningPlan__c</columns>
        <columns>docebo_v3__CompsiteForeignKey__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Learning Plan Course Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Plan Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>